Organize docs topbar CSS, add file comments to Sass partials missing them, and fix alignment issue with logo and title in topbar

--- a/docs/assets/scss/components/_topbar.scss
+++ b/docs/assets/scss/components/_topbar.scss
@@ -1,3 +1,7 @@
+// Top Bar
+// -------
+// The top-level navigation for the documentation.
+
 @font-face {
   font-family:"zurb-logo";
   font-weight: normal;
@@ -8,28 +12,34 @@
        url("../fonts/zurb-webfont.ttf") format('truetype'),
        url("../fonts/zurb-webfont.svg") format('svg');
 }
+
 .global-nav {
   overflow: hidden;
   margin-bottom: 0px;
   height: 45px;
   background: #333;
+
   ul.title-area { 
     margin-bottom: 0px;
     position: relative;
     float: left;
     width:auto;
     list-style: none;
+    height: 100%;
+    display: flex;
+
     li.name {
+      display: flex;
+
       img.zurb-logo {
-        width:72px !important;
-        height:16px !important;
-        margin-right: 5px;
-        margin-bottom: -3px;
+        width: 72px !important;
+        height: 16px !important;
+        margin-right: 8px;
       }
+
       a { 
-        display: inline-block;
         color: #fff;
-        padding: 10px;
+
         @media only screen and (max-width: 769px) {
           &.sidebar-button {
             display: inline-block !important; 
@@ -37,41 +47,50 @@
           }
         }
       }
+
       h1 {
-        display:inline-block; 
+        display: inline-flex;
+        justify-content: center;
         padding: 0; 
+        margin: 0;
         line-height: 18px;
-        margin-top: 0;
-        // margin-left: 20px;
-        @media only screen and (max-width: 769px) {
-          margin-left: -10px; 
-        } 
-        a { 
-          opacity: 1;
-          opacity: .75;
-          -webkit-transition: all .25s ease-in-out;
-          -moz-transition: all .25s ease-in-out;
-          -o-transition: all .25s ease-in-out;
-          transition: all .25s ease-in-out;
+
+        a {
+          display: flex;
+          align-items: center;
           font-family: "zurb-logo";
-          font-weight: normal;
           font-size: 36px;
-          padding: 12px 15px 12px 0;
-          text-rendering: auto; 
-          &:hover { opacity: 0.75; opacity: 1; }
-          span { display: none; }
-          strong { font-family: helvetica; font-size: 17px; margin-left: -7px; }
+          font-weight: normal;
+          text-rendering: auto;
+          opacity: .75;
+          transition: opacity .25s ease-in-out;
+
+          &:hover {
+            opacity: 1;
+          }
+
+          span {
+            display: none;
+          }
+          strong {
+            font-family: Helvetica;
+            font-size: 17px;
+            margin-top: 2px;
+          }
         }
       }
     }
   }
+
   ul.right {
     margin-bottom: 0px;
     float:right;
     margin-right: none;
+
     li {
       display: block;
       float: left;
+
       a {
         color: #fff;
         font-size: 13px;
@@ -81,13 +100,30 @@
         padding: 0 15px;
         border-left: 1px solid #4d4d4d;
         background: #333;
-        &.avatar { line-height: 0; 
-          img { height: 47px; display: block; padding: 5px 0 7px; } 
+
+        &.avatar {
+          line-height: 0; 
+
+          img {
+            height: 47px;
+            display: block;
+            padding: 5px 0 7px;
+          } 
         }
-        &.current { background: #484848; &:hover { background: #484848; } }
-        &:hover { color: #FFF; background: #3d3d3d; }
+
+        &.current {
+          &, &:hover { background: #484848; }
+        }
+        
+        &:hover {
+          color: #fff;
+          background: #3d3d3d;
+        }
       }
-      a:not(.button) { padding: 0 15px; }
+
+      a:not(.button) {
+        padding: 0 15px;
+      }
     }
   }
 }
